<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.exercisePreview.ExercisePreviewFragment">

    <data>

        <variable
            name="exerciseData"
            type="com.example.geofitapp.ui.exercisePreview.ExerciseData" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primaryColor">

        <FrameLayout
            android:id="@+id/exercise_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <FrameLayout
                android:id="@+id/video_background"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:background="@color/primaryColor"
                android:layout_gravity="center"
                >

                <ImageView
                    android:id="@+id/videoView_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/triceps_pushdown_thumb" />

                <ImageView
                    android:id="@+id/playBtn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_play" />
            </FrameLayout>
        </FrameLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/exercise_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{exerciseData.exerciseName}"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="Triceps Pushdown" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@{exerciseData.description}"
                    android:textColor="@color/white"
                    tools:text="@string/triceps_pushdown_desc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/circular_view"
                            android:gravity="center"
                            android:layout_marginEnd="15dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/reps_minus_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_minus__2" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <EditText
                                    android:id="@+id/reps_editText"
                                    style="@style/StyledEditText"
                                    android:hint="0"
                                    tools:text="12" />

                                <TextView
                                    android:id="@+id/reps_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/reps_txt"
                                    android:textColor="@color/white" />
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/reps_plus_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_plus__1" />

                        </LinearLayout>

                        <!--                        sets-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/circular_view"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/sets_minus_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_minus__2" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:orientation="vertical">


                                <EditText
                                    android:id="@+id/sets_editText"
                                    style="@style/StyledEditText"
                                    android:hint="0"
                                    tools:text="3" />

                                <TextView
                                    android:id="@+id/sets_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sets_txt"
                                    android:textColor="@color/white" />
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/sets_plus_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_plus__1" />
                        </LinearLayout>
                    </LinearLayout>

                    <!--  Weight and Rest Start-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/circular_view"
                            android:gravity="center"
                            android:layout_marginEnd="15dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/weight_minus_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_minus__2" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:orientation="vertical">


                                <EditText
                                    android:id="@+id/weight_editText"
                                    style="@style/StyledEditText"
                                    android:hint="0"
                                    android:inputType="numberDecimal"
                                    tools:text="12" />

                                <TextView
                                    android:id="@+id/weight_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/weight_txt"
                                    android:textColor="@color/white" />
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/weight_plus_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_plus__1" />
                        </LinearLayout>

                        <!--  rest period-->

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:background="@drawable/circular_view"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/rest_minus_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_minus__2" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <EditText
                                    android:id="@+id/rest_editText"
                                    style="@style/StyledEditText"
                                    android:hint="0"
                                    tools:text="60" />

                                <TextView
                                    android:id="@+id/rest_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/rest_txt"
                                    android:textColor="@color/white" />
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/rest_plus_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_plus__1" />
                        </LinearLayout>
<!--                        rest end weight end below-->
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_exercise"
            style="@style/ButtonStyled"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/start_exercise_btn"
            android:textColor="@color/white" />
    </LinearLayout>

</layout>