...
                    <TextView
                        android:id="@+id/reps_overlay_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@id/testRep"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="0" />

                    <TextView
                        android:id="@+id/testRep"
                        style="@style/DetailsTextView"
...
                    <TextView
                        android:id="@+id/sets_overlay_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@id/testSet"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="1"

                        />

                    <TextView
...
