...
    <string name="triceps_pushdown_text_hover">Triceps Pushdown</string>
    <string name="front_raise_text_hover">Front Raise</string>
    <string name="shoulder_press_text_hover">Shoulder Press</string>
    <string name="timer_text">Get into the starting position</string>

    <!--    Exercise Video Names and Details -->
    <string name="bicep_curl_desc">The biceps curl is a highly recognizable weight-training exercise that works the muscles of the upper arm, and to a lesser extent, those of the lower arm.
        It\'s a great exercise for seeing results in strength and definition.
       </string>

    <string name="triceps_pushdown_desc">The triceps pushdown is an isolation exercise rather than
        a compound motion. This makes it a great exercise for targeting your triceps.
        The primary muscle group worked by the triceps pushdown is, as you may have guessed, your triceps.</string>
...
